--- a/src/vscode-bicep/package.json
+++ b/src/vscode-bicep/package.json
@@ -35,11 +35,18 @@
   },
   "homepage": "https://github.com/Azure/bicep/blob/main/README.md",
   "activationEvents": [
-    "onLanguage:bicep"
+    "onLanguage:bicep",
+    "onCommand:oam.graph"
   ],
   "main": "./out/extension",
   "enableProposedApi": true,
   "contributes": {
+    "commands": [
+      {
+        "command": "oam.graph",
+        "title": "Show OAM Application Diagram"
+      }
+    ],
     "configurationDefaults": {
       "[bicep]": {
         "editor.tabSize": 2,
@@ -97,6 +104,7 @@
     "@types/node": "^14.14.20",
     "@types/semver": "^7.3.4",
     "@types/triple-beam": "^1.3.2",
+    "@types/viz.js": "^2.1.0",
     "@types/vscode": "^1.52.0",
     "@types/webpack": "^4.41.25",
     "@typescript-eslint/eslint-plugin": "^4.12.0",
@@ -114,6 +122,7 @@
     "ts-loader": "^8.0.14",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3",
+    "viz.js": "^2.1.2",
     "vsce": "^1.83.0",
     "vscode-test": "^1.4.1",
     "webpack": "^5.11.1",
