--- a/src/Bicep.Cli/Properties/launchSettings.json
+++ b/src/Bicep.Cli/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Bicep.Cli": {
       "commandName": "Project",
-      "commandLineArgs": "build D:\\DSL\\EladDemo.arm",
+      "commandLineArgs": "--help",
       "remoteDebugEnabled": false
     }
   }
