Experiment: Use monaco language client for playground

--- a/src/playground/package.json
+++ b/src/playground/package.json
@@ -36,10 +36,12 @@
   "dependencies": {
     "bootstrap": "^4.5.3",
     "monaco-editor": "^0.21.2",
+    "monaco-languageclient": "^0.13.0",
     "pako": "^2.0.2",
     "react": "^16.14.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.14.0",
-    "react-monaco-editor": "^0.40.0"
+    "react-monaco-editor": "^0.40.0",
+    "vscode-jsonrpc": "^5.0.1"
   }
 }
