--- a/src/Bicep.Wasm/Bicep.Wasm.csproj
+++ b/src/Bicep.Wasm/Bicep.Wasm.csproj
@@ -3,16 +3,17 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <RazorLangVersion>3.0</RazorLangVersion>
+    <PublishTrimmed>false</PublishTrimmed>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.0" />
-    <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Bicep.Core\Bicep.Core.csproj" />
     <ProjectReference Include="../Bicep.Decompiler/Bicep.Decompiler.csproj" />
+    <ProjectReference Include="../Bicep.LangServer/Bicep.LangServer.csproj" />
   </ItemGroup>
 
   <ItemGroup>
