--- a/src/vscode-bicep/package.json
+++ b/src/vscode-bicep/package.json
@@ -115,7 +115,7 @@
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3",
     "vsce": "^1.85.0",
-    "vscode-test": "^1.5.0",
+    "vscode-test": "1.4.1",
     "webpack": "^5.20.1",
     "webpack-cli": "^4.5.0"
   },
