--- a/src/Bicep.Cli/Bicep.Cli.csproj
+++ b/src/Bicep.Cli/Bicep.Cli.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <AssemblyName>bicep</AssemblyName>
+    <AssemblyName>rad-bicep</AssemblyName>
     <StartupObject>Bicep.Cli.Program</StartupObject>
     <!-- .net 5 by default does not package up the native dependencies -->
     <IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
