--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -34,7 +34,7 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build-cli",
-            "program": "${workspaceFolder}/src/Bicep.Cli/bin/Debug/net5.0/Bicep.dll",
+            "program": "${workspaceFolder}/src/Bicep.Cli/bin/Debug/net5.0/rad-bicep.dll",
             "args": [
                 "build",
                 "${file}"
