--- a/.github/workflows/radius-build.yml
+++ b/.github/workflows/radius-build.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
     name: Build
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     env:
       CI: true
     steps:
@@ -48,7 +48,7 @@ jobs:
   publish:
     name: Publish 
     needs: ['build']
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
     - name: Checkout
       uses: actions/checkout@v2
