--- a/.github/workflows/radius-build.yml
+++ b/.github/workflows/radius-build.yml
@@ -20,10 +20,8 @@ jobs:
         submodules: true
     - name: Parse release version and set environment variables
       run: python ./.github/scripts/get_release_version.py\
-    - name: Setup Node
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14'
+    - name: Setup NPM
+      run: sudo apt update && sudo apt install npm -y
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
