--- a/.github/workflows/radius-build.yml
+++ b/.github/workflows/radius-build.yml
@@ -20,8 +20,10 @@ jobs:
         submodules: true
     - name: Parse release version and set environment variables
       run: python ./.github/scripts/get_release_version.py\
-    - name: Setup NPM
-      run: sudo apt update && sudo apt install npm -y
+    - name: Setup Node
+      uses: actions/setup-node@v2
+      with:
+        node-version: '14'
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
