--- a/.github/workflows/radius-build.yml
+++ b/.github/workflows/radius-build.yml
@@ -75,7 +75,7 @@ jobs:
         container_name: ${{ secrets.ASSETS_STORAGE_CONTAINER }}
         connection_string: ${{ secrets.ASSETS_STORAGE_CONNECTION_STRING }}
         source_dir: ./artifacts/bicep/linux-x64/
-        extra_args: '--destination-path ./bicep/${{ env.REL_CHANNEL }}/linux-x64/ --pattern rad-bicep'
+        extra_args: '--destination-path ./bicep/${{ env.REL_CHANNEL }}/linux-x64/ --pattern rad-bicep --overwrite true'
         sync: true
     - uses: bacongobbler/azure-blob-storage-upload@v1.2.0
       name: Upload rad-bicep (MacOS)
@@ -83,7 +83,7 @@ jobs:
         container_name: ${{ secrets.ASSETS_STORAGE_CONTAINER }}
         connection_string: ${{ secrets.ASSETS_STORAGE_CONNECTION_STRING }}
         source_dir: ./artifacts/bicep/macos-x64/
-        extra_args: '--destination-path ./bicep/${{ env.REL_CHANNEL }}/macos-x64/ --pattern rad-bicep'
+        extra_args: '--destination-path ./bicep/${{ env.REL_CHANNEL }}/macos-x64/ --pattern rad-bicep --overwrite true'
         sync: true
     - uses: bacongobbler/azure-blob-storage-upload@v1.2.0
       name: Upload rad-bicep (Windows)
@@ -91,7 +91,7 @@ jobs:
         container_name: ${{ secrets.ASSETS_STORAGE_CONTAINER }}
         connection_string: ${{ secrets.ASSETS_STORAGE_CONNECTION_STRING }}
         source_dir: ./artifacts/bicep/windows-x64/
-        extra_args: '--destination-path ./bicep/${{ env.REL_CHANNEL }}/windows-x64/ --pattern rad-bicep.exe'
+        extra_args: '--destination-path ./bicep/${{ env.REL_CHANNEL }}/windows-x64/ --pattern rad-bicep.exe --overwrite true'
         sync: true
     - uses: bacongobbler/azure-blob-storage-upload@v1.2.0
       name: Upload VS Code (channel)
@@ -99,7 +99,7 @@ jobs:
         container_name: ${{ secrets.ASSETS_STORAGE_CONTAINER }}
         connection_string: ${{ secrets.ASSETS_STORAGE_CONNECTION_STRING }}
         source_dir: ./artifacts/vscode/
-        extra_args: '--destination-path ./vscode/${{ env.REL_CHANNEL }}/'
+        extra_args: '--destination-path ./vscode/${{ env.REL_CHANNEL }}/ --overwrite true'
         sync: true
 
     # Logic: If this is a real release (tagged, non-rc) then compare to our existing full
@@ -134,5 +134,5 @@ jobs:
         container_name: ${{ secrets.ASSETS_STORAGE_CONTAINER }}
         connection_string: ${{ secrets.ASSETS_STORAGE_CONNECTION_STRING }}
         source_dir: ./artifacts/vscode/
-        extra_args: '--destination-path ./vscode/stable/'
+        extra_args: '--destination-path ./vscode/stable/ --overwrite true'
         sync: true
