Adding extra documentation and private build on PR (temp)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,2 +1,5 @@
 {
+    "yaml.schemas": {
+        "https://json.schemastore.org/github-workflow.json": "file:///Users/willsmith/dev/bicep/.github/workflows/build.yml"
+    }
 }
