--- a/src/Bicep.Core/Bicep.Core.csproj
+++ b/src/Bicep.Core/Bicep.Core.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <None Remove="bicepconfig.json" />
+    <None Remove="TypeSystem\Radius\" />
   </ItemGroup>
 
   <ItemGroup>
@@ -52,6 +53,12 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Update="Nerdbank.GitVersioning" Version="3.4.255" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Bicep.Types.Radius\Bicep.Types.Radius.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="TypeSystem\Radius\" />
   </ItemGroup>
   <ProjectExtensions><VisualStudio><UserProperties configuration_4bicepconfig_1json__JsonSchema="https://appsemble.app/api.json" /></VisualStudio></ProjectExtensions>
 </Project>
