--- a/src/Bicep.Core/Bicep.Core.csproj
+++ b/src/Bicep.Core/Bicep.Core.csproj
@@ -42,5 +42,11 @@
 			<LastGenOutput>CoreResources.Designer.cs</LastGenOutput>
 		</EmbeddedResource>
 	</ItemGroup>
+	  <ItemGroup>
+    <ProjectReference Include="..\Bicep.Types.Radius\Bicep.Types.Radius.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="TypeSystem\Radius\" />
+  </ItemGroup>
 	<ProjectExtensions><VisualStudio><UserProperties configuration_4bicepconfig_1json__JsonSchema="https://appsemble.app/api.json" /></VisualStudio></ProjectExtensions>
 </Project>
