--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -28,7 +28,7 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "Build CLI",
-            "program": "${workspaceFolder}/src/Bicep.Cli/bin/Debug/net6.0/Bicep.dll",
+            "program": "${workspaceFolder}/src/Bicep.Cli/bin/Debug/net6.0/rad-bicep.dll",
             "args": [
                 "build",
                 "${file}"
