--- a/src/Bicep.Core/Bicep.Core.csproj
+++ b/src/Bicep.Core/Bicep.Core.csproj
@@ -37,6 +37,7 @@
     <PackageReference Include="Azure.Bicep.Types.Az" Version="0.1.538" />
     <PackageReference Include="Azure.Bicep.Types.K8s" Version="0.1.11" />
     <PackageReference Include="System.IO.Abstractions" Version="17.0.18" />
+    <ProjectReference Include="../Bicep.Types.Aws/Bicep.Types.Aws.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="CoreResources.Designer.cs">
