Fixing runners issue

--- a/.github/workflows/radius-build.yml
+++ b/.github/workflows/radius-build.yml
@@ -55,7 +55,7 @@ jobs:
     if: ${{ github.event_name == 'push' }}
     name: Publish to Azure Blob Storage
     needs: ["build"]
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
